# agentsight

./: .gitignore  README.md  pyproject.toml
docs/: ARCHITECTURE.md  AUTO_INSTRUMENTATION.md  INTEGRATION_GUIDE.md  LANDSCAPE.md  QUICKSTART.md
examples/: demo.py  demo.tape  gif_demo.py  gif_detailed_demo.py  quick_demo.py
src/agent_observability/: __init__.py  _state.py  auto.py  observer.py  otel_setup.py
src/agent_observability/_patch/: __init__.py  anthropic.py  autogen.py  bedrock.py  crewai.py  google_adk.py  haystack.py  langchain.py  langgraph.py  llamaindex.py  openai_agents.py  phidata.py  pydantic_ai.py  semantic_kernel.py  smolagents.py
src/agent_observability/adapters/: __init__.py  anthropic_agents.py  autogen.py  bedrock_agents.py  crewai.py  generic.py  google_adk.py  haystack.py  langchain.py  langgraph.py  llamaindex.py  openai_agents.py  phidata.py  pydantic_ai.py  semantic_kernel.py  smolagents.py
src/agentsight/: __init__.py  _state.py  auto.py  events.py  observer.py  otel_setup.py  redaction.py
src/agentsight/_patch/: anthropic.py  autogen.py  bedrock.py  crewai.py  google_adk.py  haystack.py  langchain.py  langgraph.py  llamaindex.py  openai_agents.py  phidata.py  pydantic_ai.py  semantic_kernel.py  smolagents.py
src/agentsight/adapters/: anthropic_agents.py  autogen.py  bedrock_agents.py  crewai.py  generic.py  google_adk.py  haystack.py  langchain.py  langgraph.py  llamaindex.py  openai_agents.py  phidata.py  pydantic_ai.py  semantic_kernel.py  smolagents.py
tests/: conftest.py  test_auto.py  test_events.py  test_observer.py  test_redaction.py
tests/test_adapters/: test_anthropic.py  test_autogen.py  test_generic.py  test_remaining_adapters.py
